modify pipe padding so fixed-width spacing is maintained
before this change, moving the caret up and down between lines with and
without pipes caused the caret to shift left/right by a few pixels
because the ligature is displayed as less than the 2 full character
widths it contains

--- a/client/styles/_fluid.scss
+++ b/client/styles/_fluid.scss
@@ -386,8 +386,7 @@ https://github.com/chriskempson/tomorrow-theme */
   .fluid-pipe-symbol {
     color: $blue;
     font-size: 10px;
-    padding-top: 3px;
-    padding-bottom: 1px;
+    padding: 3px 4px 1px 0px;
   }
 
   /* Will style more later. Cmd palette should look like a smaller version of omnibox
